--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/jedrzejSmok/projektZBD#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "method-override": "^3.0.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.12.0-alpha.1"
   }
