--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/jedrzejSmok/projektZBD.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jędrzej Smok",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/jedrzejSmok/projektZBD/issues"
